# naver-stock-mcp

./: .gitignore  .mcpbignore  README.en.md  README.md  install.bat  install.ps1  install.sh  pyproject.toml  update.bat  update.sh
.github/workflows/: release.yml
docs/: BUSINESS_STRATEGY.md  PROJECT_MASTER.md
guides/en/: INSTALL.md  TOOLS.md  USAGE.md
guides/ko/: INSTALL.md  TOOLS.md  USAGE.md
stock_mcp_server/: _cache.py  _excel.py  _http.py  _indicators.py  _update_check.py  doctor.py  naver.py  server.py  setup_claude.py  yfinance_source.py
