[project]
name = "stock-mcp-server"
version = "0.1.0"
description = "네이버 증권 데이터를 Claude에서 바로 조회할 수 있는 MCP 서버"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
stock-mcp-server = "stock_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
